# rongor-engine

./: Cargo.toml
assets/Cat/: 20430_Cat_v1_NEW.obj.json
assets/penguin/: PenguinBaseMesh.mtl  PenguinBaseMesh.obj.json
backups/: mainbackup.rs  maintestestestestes.rs
fonttest/: Cargo.toml
fonttest/src/: main.rs
rongor/: Cargo.toml
rongor/src/: antialiasing.rs  camera.rs  color.rs  draw.rs  font.rs  hitbox.rs  image.rs  key.rs  lib.rs  math.rs  mesh.rs  mouse.rs  prelude.rs  run.rs  shader.rs  sound.rs  todo  ui.rs  vec.rs  window.rs
src/: main.rs  main11.rs  main16.rs  main17.rs  main2.rs  main20.rs  main3.rs  main5.rs  main7.rs  main8.rs  main9.rs  main_neuralnetwork.rs  main_shader.rs  main_shader_toy.rs  mainui.rs  minecraft.rs  nntest.txt  test.glsl
