[package]
name = "rongor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.5"
tokio = { version = "1", features = ["full"] } 
image = "0.25.0"
perlin_noise = "1.0.1"
simple-simplex = "1.0.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
tobj = "2.0"
crossterm = "0.27.0"
